--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.4.8"
+  },
+
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agee6/ChatExample"
   }
 }
